--- a/assets/style.css
+++ b/assets/style.css
@@ -39,7 +39,7 @@ body {
   .hour {
     background-color: #ffffff;
     color: #000000;
-    border-top: 1px dashed #000000;
+    border-top: 5px dotted orchid;
   }
   
   .past {
